<resources>
    <string name="app_name">EDA397 PP app</string>
    <string name="hello_world">Hello world!</string>
    <string name="preference_file_name">Preferences</string>

    <!-- Menu Item Names -->
    <string name="action_settings">Settings</string>

    <!-- Account Information Prompts -->
    <string name="tracker_key">Enter Pivotal Tracker key</string>

    <!-- Pivotal Tracker Connections -->
    <string name="title_button_get_stories">View Roadmap</string>
    <string name="title_button_add_stories">Add Stories</string>
    <string name="title_button_set_tracker_key">Set Tracker Key</string>

    <!-- Main Activity Strings -->
    <string name="title_activity_main_activity">Main Menu</string>

    <!-- Planning Poker Activity Strings -->
    <string name="title_activity_plannig_poker">Planning Poker</string>
    <string name="title_activity_planning_poker_display">Planning Poker Display</string>

    <string name="planning_poker_button_1_text">0</string>
    <string name="planning_poker_button_2_text">1</string>
    <string name="planning_poker_button_3_text">2</string>
    <string name="planning_poker_button_4_text">3</string>
    <string name="planning_poker_button_5_text">5</string>
    <string name="planning_poker_button_6_text">8</string>

    <string name="planning_poker_win_button">Assign Value</string>
    <string name="planning_poker_lose_button">Go Back</string>

    <!-- Pair Programming Tips Strings -->
    <string name="title_activity_pair_programming_tips">Pair Programming Tips</string>
    <string name="title_activity_pair_programming_tips_display">Pair Programming Tips Display</string>

    <string name="pair_programming_tips_text">This is a pair programming tip!</string>

    <!-- View Roadmap Strings -->
    <string name="title_activity_view_roadmap">View Roadmap</string>

    <string name="view_roadmap_text">What kind of stories do you want to see?</string>

    <!-- View Roadmap List Strings -->
    <string name="title_activity_view_roadmap_list">View Roadmap List</string>

    <string name="view_roadmap_list_text">Select a story!</string>

    <!-- View Individual Story String< -->
    <string name="title_activity_view_individual_story">View Individual Story</string>

    <string name="story_name_text">Name: </string>
    <string name="story_description_text">Description: </string>
    <string name="story_priority_text">Priority: </string>
    <string name="story_estimate_text">Estimate: </string>
    <string name="story_status_text">Status: </string>

    <!-- Timer Activity Strings -->
    <string name="title_activity_timer">Pair Programming Timer</string>
    <string name="timer_on_off_switch_text">Set timer on/off</string>
    <string name="timer_reset_button_text">Reset</string>
    <string name="timer_start_button_text">Start</string>
    <string name="timer_pause_button_text">Pause</string>

</resources>
