<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_main_activity"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/title_activity_plannig_poker"
                android:id="@+id/planningPokerButton"
                android:layout_weight="1"
                android:onClick="planningGameButton"
                android:textSize="@dimen/activity_main_button_text_size" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/title_button_add_stories"
                android:id="@+id/getStoriesButton"
                android:layout_weight="1"
                android:onClick="addStoriesButton"
                android:textSize="@dimen/activity_main_button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/title_button_set_tracker_key"
                android:id="@+id/trackerKeyButton"
                android:layout_weight="1"
                android:onClick="trackerKeyButton"
                android:textSize="@dimen/activity_main_button_text_size" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/title_activity_timer"
                android:id="@+id/mainActivityTimerButton"
                android:layout_weight="1"
                android:onClick="timerButton"
                android:textSize="@dimen/activity_main_button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/title_button_get_stories"
                android:id="@+id/addStoriesButton"
                android:layout_weight="1"
                android:onClick="getStoriesButton"
                android:textSize="@dimen/activity_main_button_text_size" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
				android:text="@string/title_activity_pair_programming_tips"
                android:id="@+id/pairProgrammingTipsButton"
                android:layout_weight="1"
                android:onClick="pairProgramingTipsButton"
                android:textSize="@dimen/activity_main_button_text_size"
                android:nestedScrollingEnabled="false" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

